@@ -3,10 +3,12 @@
 	* src/SDCCutil.c: fixed a bug in (get_pragma_token)
 	* src/pic16/main.c, src/SDCC.lex, src/z80/main.c:
 	  small cosmetic changes
+	* src/SDCC.lex: (stringLiteral) fixed bug #1351710
+	* support/regression/tests/bug-1351710.c: added regression test
 
 2006-12-18 Frieder Ferlemann <Frieder.Ferlemann AT web.de>
 
-	* doc/sdccman.lyx: added the long missed iCode table 
+	* doc/sdccman.lyx: added the long missed iCode table
 	  "<where is figure II?>", added links to wiki
 
 2006-12-17 Borut Razem <borut.razem AT siol.net>
